--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ django-environ==0.9.0
 Pillow==9.3.0
 psycopg2-binary==2.8.6
 django-jet==1.0.8
+beautifulsoup4==4.11.1
+requests==2.28.2
+celery==5.2.7
+redis==4.4.2
